reload tab button added for currently unloaded tabs.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h2 id="tab-count-header">Total Tabs:</h2>
     <ol id="tab-list"></ol>
     <script src="main.js"></script>
-    <button id="copy-urls">Copy URLs</button>
+    <button id="copy-urls-btn">Copy URLs</button>
   </body>
 </html>
