--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <h1>Tab List</h1>
     <h2 id="tab-count-header">Total Tabs:</h2>
+    <input id="search" type="search" />
     <ol id="tab-list"></ol>
     <script src="main.js"></script>
     <button id="copy-urls-btn">Copy URLs</button>
